--- a/templates/memoryusagegraph.mustache
+++ b/templates/memoryusagegraph.mustache
@@ -177,19 +177,20 @@ function processGraph(id, data) {
       .attr("cx", function(d) { return x(d.sampleindex); })
       .attr("cy", function(d) { return y(d.value); })
       .on("mouseover", function(event, d) {
+          const sampleindex = d.sampleindex.toLocaleString('{{lang}}');
           div.transition()
               .duration(200)
               .style("opacity", .9);
 
           div.html(`
-              Sample #${d.sampleindex} <br/>
+              Sample ${sampleindex} <br/>
               Memory: ${display_size(d.value)}
           `)
               .style("left", (event.pageX) + "px")
               .style("top", (event.pageY - 28) + "px");
 
           memoryusagedetails.innerHTML = `
-              Sample #${d.sampleindex}, Memory Usage: ${display_size(d.value)}
+              Sample ${sampleindex}, Memory Usage: ${display_size(d.value)}
           `
        })
      .on("mouseout", function(d) {
