[#310] Make generic grouped profile table

--- a/templates/profile.mustache
+++ b/templates/profile.mustache
@@ -167,7 +167,7 @@
                     <td>{{dbreplicareads}}</td>
                 </tr>
                 <tr>
-                    <th>{{#str}} field_course, tool_excimer {{/str}}</th>
+                    <th>{{#str}} field_courseid, tool_excimer {{/str}}</th>
                     <td>{{{ course }}}</td>
                 </tr>
             </table>
