Wrap long urls more nicely #322

--- a/templates/profile.mustache
+++ b/templates/profile.mustache
@@ -57,7 +57,7 @@
     }
 }}
 
-<h3>{{{responsecode}}} {{method}} {{{request}}}</h3>
+<h3 style="overflow-wrap: anywhere;">{{{responsecode}}} {{method}} {{{request}}}</h3>
 <p>{{{delete_button}}} {{{delete_all_button}}} {{{profile_lock_button}}}</p>
 
 {{#lockreason}}
